# dirhash-python

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  DIRHASH_STANDARD.md  LICENSE  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  test.yml
benchmark/: README.md  results.csv  results.json  results_v0.2.0.csv  results_v0.2.0.json  run.py
src/dirhash/: __init__.py  _version.py  cli.py  compat.py  traverse.py
tests/: test_cli.py  test_dirhash.py  test_traverse.py
